fix(grid): adds vertical alignment

--- a/src/components/Grid/Grid.module.scss
+++ b/src/components/Grid/Grid.module.scss
@@ -5,3 +5,5 @@
 @include grid.gutter('', functions.spacing(1));
 @include grid.gutter('gutterless', 0);
 @include grid.reverse();
+@include grid.valign('middle');
+@include grid.valign('bottom');
