--- a/styles/mixins/_grid.scss
+++ b/styles/mixins/_grid.scss
@@ -86,6 +86,19 @@ $fraction-names: whole half third quarter fifth sixth seventh eighth ninth tenth
 }
 
 //
+// GRID VERTICAL ALIGNMENTS
+// Sets up grid vertical-align styles
+//
+
+@mixin valign($align) {
+  .wrapper.valign-#{$align} {
+    > .item {
+      vertical-align: $align;
+    }
+  }
+}
+
+//
 // INTERNAL MIXINS
 // These mixins should not be called directly,
 // instead are used as helpers within other mixins
